# QFTbx

./: .gitignore  CMakeLists.txt  QFTbx.pro  QFTbx_es_ES.ts  README.md  config.pri  main.cpp
Consola/: consola.cpp  consola.h
DAO/: adaptadorbounddao.cpp  adaptadorbounddao.h  adaptadorcontroladordao.cpp  adaptadorcontroladordao.h  adaptadorespecificacionesdao.cpp  adaptadorespecificacionesdao.h  adaptadorloopshapingdao.cpp  adaptadorloopshapingdao.h  adaptadoromegadao.cpp  adaptadoromegadao.h  adaptadorplantadao.cpp  adaptadorplantadao.h  adaptadortemplatedao.cpp  adaptadortemplatedao.h  bounddao.h  controladordao.h  dao.h  especificacionesdao.h  fdao.cpp  fdao.h  loopshapingdao.h  omegadao.h  plantadao.h  templatedao.h
GPU/CUDA/: e_hull_cuda.cu
GPU/OpenCL/: bnd_opencl.cl  e_hull_opencl.cl
GUI/: diagramabode.cpp  diagramabode.h  diagramabode.ui  intdatosboundaries.cpp  intdatosboundaries.h  intdatosboundaries.ui  intespecificaciones.cpp  intespecificaciones.h  intespecificaciones.ui  intincertidumbre.cpp  intincertidumbre.h  intincertidumbre.ui  intloopshaping.cpp  intloopshaping.h  intloopshaping.ui  intomega.cpp  intomega.h  intomega.ui  introducirecontr.cpp  introducirecontr.h  introducirecontr.ui  introducirplanta.cpp  introducirplanta.h  introducirplanta.ui  introducirrango.ui  introducirtemplates.cpp  introducirtemplates.h  introducirtemplates.ui  verboundaries.cpp  verboundaries.h  verboundaries.ui  viewbound.cpp  viewbound.h  viewbound.ui  viewboundreun.cpp  viewboundreun.h  viewboundreun.ui  viewloopshaping.cpp  viewloopshaping.h  viewloopshaping.ui  (+6 more)
GUI/QML/: WindowsgeneralForm.ui.qml  qml.qrc  windowsgeneral.qml
Imagenes/: imagenesPlanta.qrc.depends
Imagenes/imagenes/: especificaciones.tex
Librerias/QLogger/: CMakeLists.txt
Librerias/cxsc/: CMakeLists.txt
Librerias/cxsc/CToolbox/Modules/: cpoly.hpp  cpzero.cpp  cpzero.hpp
Librerias/cxsc/src/: cdot.cpp  cdot.hpp  cdot.inl  cidot.cpp  cidot.hpp  cidot.inl  cimath.cpp  cimath.hpp  cimatrix.cpp  cimatrix.hpp  cimatrix.inl  cinterval.cpp  cinterval.hpp  cinterval.inl  civeccmat.hpp  civeccmat.inl  civecimat.hpp  civecimat.inl  civecrmat.hpp  civecrmat.inl  civector.cpp  civector.hpp  civector.inl  cmatrix.cpp  cmatrix.hpp  cmatrix.inl  complex.cpp  complex.hpp  complex.inl  cvecimat.hpp  cvecrmat.hpp  cvecrmat.inl  cvector.cpp  cvector.hpp  cvector.inl  cxscmatr.cpp  cxscmatr.hpp  cxscvect.hpp  dot.cpp  dot.hpp  (+112 more)
Librerias/cxsc/src/rts/: a_time.c  b_cm.cpp
Librerias/literm/: CMakeLists.txt  qml.qrc  utilities.cpp
Librerias/muparserx/: CMakeLists.txt  muParser_compile.sh
Librerias/muparserx.bak/: CMakeLists.txt  Readme.txt
Librerias/muparserx.bak/sample/: example.cpp
Librerias/qcustomplot/: CMakeLists.txt  qcustomplot_compile.sh
Modelo/: controlador.cpp  controlador.h
Modelo/Boundaries/: algoritmointerseccionlineal1D.cpp  algoritmointerseccionlineal1D.h  algoritmointerseccionproyectivo2D.cpp  algoritmointerseccionproyectivo2D.h  boundaries.cpp  boundaries.h  contour.cpp  contour.h  contour2.cpp  contour2.h
Modelo/EstructuraSistema/: cpolinomios.cpp  cpolinomios.h  formatolibre.cpp  formatolibre.h  funciontransferencia.cpp  funciontransferencia.h  kganancia.cpp  kganancia.h  knganancia.cpp  knganancia.h  polosceros.cpp  polosceros.h  sistema.cpp  sistema.h
Modelo/EstructurasDatos/: datosbound.cpp  datosbound.h  datosloopshaping.cpp  datosloopshaping.h  datosplanta.cpp  datosplanta.h  parlineedit.cpp  parlineedit.h  var.cpp  var.h
Modelo/Herramientas/: tools.cpp  tools.h
Modelo/LoopShaping/: algorithm_nandkishor.cpp  algorithm_nandkishor.h  algorithm_primer_articulo.cpp  algorithm_primer_articulo.h  algorithm_rambabu.cpp  algorithm_rambabu.h  algorithm_sachin.cpp  algorithm_sachin.h  algorithm_segundo_articulo.cpp  algorithm_segundo_articulo.h  funcionescomunes.h  loopshaping.cpp  loopshaping.h
Modelo/LoopShaping/DeteccionViolacionBoundaries/: deteccionviolacionboundaries.cpp  deteccionviolacionboundaries.h  deteccionviolacionboundaries2D.cpp  deteccionviolacionboundaries2D.h  testdeteccion.cpp  testdeteccion.h
Modelo/LoopShaping/EstructuraDatos/: arbol_exp.cpp  arbol_exp.h  avl.h  data_box.cpp  data_box.h  datosfeasible.cpp  datosfeasible.h  etapas.h  listaordenada.cpp  listaordenada.h  n.h  nodo.h  tripleta.cpp  tripleta.h  tripleta2.cpp  tripleta2.h
Modelo/LoopShaping/NaturalIntervalExtension/: natural_interval_extension.cpp  natural_interval_extension.h
Modelo/Objetos/: incertidumbre.cpp  incertidumbre.h  omega.cpp  omega.h
Modelo/Templates/: templates.cpp  templates.h
Resources/Icon/: QFTbx.desktop.in  icons.qrc  qftbx.desktop.in  qftbx.rc  qftbx.xcf
Resources/Images/: imagenesPlanta.qrc
XmlParser/: parserload.h  parsersave.h  xmlparserload.cpp  xmlparsersave.cpp
